# reactCppBackend

./: CMakeLists.txt  Readme.md
CMake/: Findlibrestbed.cmake
include/: CalcResourceFactory.h  CalcService.h  CalcServiceSettingsFactory.h  IResourceFactory.h  IService.h  IServiceSettingsFactory.h
src/: CMakeLists.txt  CalcResourceFactory.cpp  CalcService.cpp  CalcServiceSettingsFactory.cpp  main.cpp
